--- a/index.html
+++ b/index.html
@@ -30,13 +30,40 @@
 </head>
 <body>
     <header>
-
+       <nav class="w-11/12 lg:w-4/5 mx-auto flex justify-between items-center my-9 md:my-14">
+            <div class="flex items-center space-x-2">
+                <div class="bg-[#ABEF5F] size-10 flex justify-center items-center rounded-3xl text-2xl ">
+                    <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                </div>
+                
+                <h1 class="text-3xl md:text-4xl font-bold text-[#212121]">Rinterio</h1>
+            </div>
+            <div class="hidden md:block">
+                <ul class="flex space-x-12 text-[#737373] text-lg">
+                    <li class="hover:font-semibold">Home</li>
+                    <li class="hover:font-semibold">Services</li>
+                    <li class="hover:font-semibold">Portfolio</li>
+                    <li class="hover:font-semibold">Blogs</li>
+                    <li class="hover:font-semibold">Contact Us</li>
+                </ul>
+            </div>
+            <div class="hidden md:block space-x-4">
+                <button class="btn btn-circle"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button class="btn btn-circle"><i class="fa-solid fa-cart-shopping"></i></button>
+                <button class="btn btn-primary border-none bg-[#ABEF5F] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl">Book Consult<div class="bg-[#1C1C1C] size-8 flex justify-center items-center rounded-3xl text-2xl text-white">
+                    <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                </div></button>
+            </div>
+            <div class="md:hidden border-2 size-12 flex justify-center items-center rounded-3xl text-xl overflow-hidden">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+       </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
-    </footer>
+
+    </footer>           
 </body>
 </html>
