completed the banner section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
        </nav>
+       <div class="w-[90%] mx-auto text-center space-y-4 lg:space-y-6">
+            <img class="mx-auto" src="assets/banner.png" alt="">
+            <h1 class="text-3xl lg:text-7xl text-[#212121] font-bold">A barn house of this design has a striking appearance</h1>
+            <p class="text-lg lg:text-lg text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <button class="btn w-full md:w-auto border-green-400 bg-[#ABEF5F80] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl">View Details<div class="bg-[#ABEF5F] size-8 flex justify-center items-center rounded-3xl text-2xl">
+                <i class="fa-solid fa-arrow-right -rotate-45"></i>
+            </div></button>
+       </div>
     </header>
     <main>
 
