--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </script>
 </head>
 <body>
-    <header>
+    <header class="mb-10 lg:mb-20 bg-gradient-to-t from-white to-white/0">
        <nav class="w-11/12 lg:w-4/5 mx-auto flex justify-between items-center my-9 md:my-14">
             <div class="flex items-center space-x-2">
                 <div class="bg-[#ABEF5F] size-10 flex justify-center items-center rounded-3xl text-2xl ">
@@ -67,8 +67,45 @@
             </div></button>
        </div>
     </header>
-    <main>
-
+    <main class="bg-stone-100">
+        <div class="flex flex-col items-center text-center space-y-4 lg:space-y-6">
+            <button class="items-center btn bg-white rounded-3xl space-x-2 border-none">
+                <i class="fa-solid fa-arrow-right"></i>
+                <p class="text-lg font-bold text-[#494949]">How we works</p>
+            </button>
+            <h1 class="text-[#212121] text-2xl lg:text-5xl font-bold">Our Works Process</h1>
+            <p class="text-[#494949] w-[90%] lg:w-1/2">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="grid grid-cols-1 lg:grid-cols-4 w-[90%] lg:w-4/5 mx-auto gap-6 mt-8">
+            <div class="card">
+                <div class="card-body bg-[#E7C1D3] rounded-2xl">
+                    <img class="w-12" src="assets/concept.png" alt="">
+                  <h2 class="card-title text-xl font-bold">Concept</h2>
+                  <p class="text-[#494949] text-[1rem]">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body bg-[#EFDA6E] rounded-2xl ">
+                    <img class="w-12" src="assets/flowChart.png" alt="">
+                  <h2 class="card-title text-xl font-bold">Design Process</h2>
+                  <p class="text-[#494949] text-[1rem]">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body bg-[#A4DAC3] rounded-2xl">
+                    <img class="w-12" src="assets/vision.png" alt="">
+                  <h2 class="card-title text-xl font-bold">Supervision</h2>
+                  <p class="text-[#494949] text-[1rem]">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body bg-[#77AAEA] rounded-2xl">
+                    <img class="w-12" src="assets/budgetPlanning.png" alt="">
+                  <h2 class="card-title text-xl font-bold">Budget Planning</h2>
+                  <p class="text-[#494949] text-[1rem]">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
