--- a/index.html
+++ b/index.html
@@ -61,17 +61,62 @@
        <div class="w-[90%] mx-auto text-center space-y-4 lg:space-y-6">
             <img class="mx-auto" src="assets/banner.png" alt="">
             <h1 class="text-3xl lg:text-7xl text-[#212121] font-bold">A barn house of this design has a striking appearance</h1>
-            <p class="text-lg lg:text-lg text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <p class="text-lg lg:text-lg text-[#936161]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             <button class="btn w-full md:w-auto border-green-400 bg-[#ABEF5F80] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl">View Details<div class="bg-[#ABEF5F] size-8 flex justify-center items-center rounded-3xl text-2xl">
                 <i class="fa-solid fa-arrow-right -rotate-45"></i>
             </div></button>
        </div>
     </header>
     <main class="bg-stone-100">
+        <div class="relative hidden lg:block">
+            <div class="absolute top-10 left-24">
+                <img src="assets/Vector.png" alt="">
+            </div>
+        </div>
+        <div class="w-[90%] lg:w-4/5 mx-auto grid lg:grid-cols-2 gap-10 py-10 lg:py-24">
+            <div class="space-y-4">
+                <div class="flex justify-center lg:justify-start">
+                    <button class="items-center btn bg-white rounded-3xl space-x-2 border-none text-[#494949]">
+                        <i class="fa-solid fa-arrow-right"></i>
+                        <p class="text-lg font-bold">About Us</p>
+                    </button>
+                </div>
+                <div class="space-y-4 lg:space-y-6">
+                    <h1 class="text-2xl lg:text-4xl font-bold text-[#212121] text-center lg:text-left">We design thoughtful,<br> liveable spaces</h1>
+                    <p class="text-lg text-[#494949] text-center lg:text-left">The barn house captivates with its blend of rustic charm and 
+                        modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <div class="">
+                        <div class=" bg-white rounded-2xl flex p-6 gap-4  lg:items-center">
+                            <div>
+                                <img class="w-16" src="assets/commercial.png" alt="">
+                            </div>
+                            <div class="pl-6">
+                                <h1 class="text-xl text-[#494949] font-bold">Commercial</h1>
+                                <p class="text-lg text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <div class=" bg-white rounded-2xl flex p-6 gap-4  lg:items-center">
+                            <div>
+                                <img class="w-16" src="assets/residential.png" alt="">
+                            </div>
+                            <div class="pl-6">
+                                <h1 class="text-xl text-[#494949] font-bold">Commercial</h1>
+                                <p class="text-lg text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+            <div>
+                <img src="assets/Rectangle.png" alt="">
+            </div>
+        </div>
         <div class="flex flex-col items-center text-center space-y-4 lg:space-y-6">
-            <button class="items-center btn bg-white rounded-3xl space-x-2 border-none">
+            <button class="btn bg-white rounded-3xl space-x-2 border-none text-[#494949]">
                 <i class="fa-solid fa-arrow-right"></i>
-                <p class="text-lg font-bold text-[#494949]">How we works</p>
+                <p class="text-lg font-bold">How we works</p>
             </button>
             <h1 class="text-[#212121] text-2xl lg:text-5xl font-bold">Our Works Process</h1>
             <p class="text-[#494949] w-[90%] lg:w-1/2">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
