--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 </head>
 <body>
     <header class="mb-10 lg:mb-20 bg-gradient-to-t from-white to-white/0">
-       <nav class="w-11/12 lg:w-4/5 mx-auto flex justify-between items-center my-9 md:my-14">
+        <!-- navbar start's here -->
+        <nav class="w-11/12 lg:w-4/5 mx-auto flex justify-between items-center my-9 md:my-14">
             <div class="flex items-center space-x-2">
                 <div class="bg-[#ABEF5F] size-10 flex justify-center items-center rounded-3xl text-2xl ">
                     <i class="fa-solid fa-arrow-right -rotate-45"></i>
@@ -57,17 +58,22 @@
             <div class="md:hidden border-2 size-12 flex justify-center items-center rounded-3xl text-xl overflow-hidden">
                 <i class="fa-solid fa-bars"></i>
             </div>
-       </nav>
-       <div class="w-[90%] mx-auto text-center space-y-4 lg:space-y-6">
+        </nav>
+        <!-- navbar end's here -->
+       
+       <!-- banner start's here -->
+        <div class="w-[90%] mx-auto text-center space-y-4 lg:space-y-6">
             <img class="mx-auto" src="assets/banner.png" alt="">
             <h1 class="text-3xl lg:text-7xl text-[#212121] font-bold">A barn house of this design has a striking appearance</h1>
             <p class="text-lg lg:text-lg text-[#936161]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             <button class="btn w-full md:w-auto border-green-400 bg-[#ABEF5F80] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl">View Details<div class="bg-[#ABEF5F] size-8 flex justify-center items-center rounded-3xl text-2xl">
                 <i class="fa-solid fa-arrow-right -rotate-45"></i>
             </div></button>
-       </div>
+        </div>
+       <!-- banner end's here -->
     </header>
     <main class="bg-stone-100">
+        <!-- about us section start's here -->
         <div class="relative hidden lg:block">
             <div class="absolute top-10 left-24">
                 <img src="assets/Vector.png" alt="">
@@ -113,6 +119,8 @@
                 <img src="assets/Rectangle.png" alt="">
             </div>
         </div>
+        <!-- about us section end's here -->
+        <!-- how we work section start's here -->
         <div class="flex flex-col items-center text-center space-y-4 lg:space-y-6">
             <button class="btn bg-white rounded-3xl space-x-2 border-none text-[#494949]">
                 <i class="fa-solid fa-arrow-right"></i>
@@ -121,7 +129,7 @@
             <h1 class="text-[#212121] text-2xl lg:text-5xl font-bold">Our Works Process</h1>
             <p class="text-[#494949] w-[90%] lg:w-1/2">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
         </div>
-        <div class="grid grid-cols-1 lg:grid-cols-4 w-[90%] lg:w-4/5 mx-auto gap-6 mt-8">
+        <div class="grid grid-cols-1 lg:grid-cols-4 w-[90%] lg:w-4/5 mx-auto gap-6 mt-8 pb-10 lg:pb-20">
             <div class="card">
                 <div class="card-body bg-[#E7C1D3] rounded-2xl">
                     <img class="w-12" src="assets/concept.png" alt="">
@@ -151,6 +159,38 @@
                 </div>
             </div>
         </div>
+        <!-- how we work section end's here -->
+        <!-- let's connect section starts here -->
+        <div class="flex flex-col items-center space-y-4">
+            <button class="btn bg-[rgba(171,239,95,0.2)] rounded-3xl space-x-2 border-none text-[#494949]">
+                <i class="fa-solid fa-arrow-right"></i>
+                <p class="text-lg font-bold">Let’s Connect</p>
+            </button>
+            <div class="w-full space-y-6 flex flex-col items-center">
+                <h1 class="w-[90%] mx-auto text-center text-2xl lg:text-4xl font-bold text-[#212121]">Let’s Discuss Next Project</h1>
+                <p class="w-[90%] lg:w-1/2 mx-auto text-center text-sm text-[#494949] lg:text-base">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <div class="w-[90%] lg:w-[67%] mx-auto space-y-5 lg:space-y-6">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 lg:gap-6">
+                        <input type="text" class="input input-bordered text-base text-[#A0A0A0] rounded-[64px] p-5" placeholder="First Name*">
+                        <input type="text" class="input input-bordered text-base text-[#A0A0A0] rounded-[64px] p-5" placeholder="Last Name*">
+                    </div>
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 lg:gap-6">
+                        <input type="text" class="input input-bordered text-base text-[#A0A0A0] rounded-[64px] p-5" placeholder="Phone Number*">
+                        <input type="text" class="input input-bordered text-base text-[#A0A0A0] rounded-[64px] p-5" placeholder="Email Number*">
+                    </div>  
+                    <div class="">
+                        <textarea type="" class="w-full h-60 input input-bordered text-base text-[#A0A0A0] rounded-[32px] p-5" placeholder="Write your message here"></textarea>
+                    </div>
+                </div>
+                <button class="btn btn-primary w-[90%] lg:w-[67%] border-none bg-[#ABEF5F] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl">
+                    Send Mail
+                    <div class="bg-[#1C1C1C] size-8 flex justify-center items-center rounded-3xl text-2xl text-white">
+                        <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                    </div>
+                </button>
+            </div>
+        </div>
+        <!-- let's connect section ends here -->
     </main>
     <footer>
 
