adding background image on lets connect section

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
         </div>
         <!-- how we work section end's here -->
         <!-- let's connect section starts here -->
-        <div class="flex flex-col items-center space-y-4">
+        <div class="flex flex-col items-center space-y-4 bg-[url('/assets/bg.jpg')] py-8 lg:py-24">
             <button class="btn bg-[rgba(171,239,95,0.2)] rounded-3xl space-x-2 border-none text-[#494949]">
                 <i class="fa-solid fa-arrow-right"></i>
-                <p class="text-lg font-bold">Let’s Connect</p>
+                <p class="text-base font-bold">Let’s Connect</p>
             </button>
             <div class="w-full space-y-6 flex flex-col items-center">
                 <h1 class="w-[90%] mx-auto text-center text-2xl lg:text-4xl font-bold text-[#212121]">Let’s Discuss Next Project</h1>
