--- a/index.html
+++ b/index.html
@@ -192,8 +192,29 @@
         </div>
         <!-- let's connect section ends here -->
     </main>
-    <footer>
+    <!-- footer section start's here -->
+    <footer class="bg-[rgb(28,28,28);] flex flex-col items-center py-[72px] lg:py-24">
+        <div class="flex items-center space-x-2">
+            <div class="bg-[#ABEF5F] size-10 flex justify-center items-center rounded-3xl text-2xl ">
+                <i class="fa-solid fa-arrow-right -rotate-45"></i>
+            </div>
+            <h1 class="text-3xl md:text-4xl font-bold text-[#E9E9E9]">Rinterio</h1>
+        </div>
+        <p class="text-lg text-[#737373] w-[83%] text-center mt-4 lg:w-1/2">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        <div class="my-8 lg:my-12   ">
+            <ul class="flex flex-col lg:flex-row gap-8 justify-center items-center lg:gap-32 text-[#E9E9E9] text-lg">
+                <li class="hover:font-semibold">Home</li>
+                <li class="hover:font-semibold">Services</li>
+                <li class="hover:font-semibold">Portfolio</li>
+                <li class="hover:font-semibold">Blogs</li>
+                <li class="hover:font-semibold">Contact Us</li>
+            </ul>
+        </div>
+        <button class="btn btn-primary border-none bg-[#ABEF5F] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl w-[83%] lg:w-fit">Book Consult<div class="bg-[#1C1C1C] size-8 flex justify-center items-center rounded-3xl text-2xl text-white">
+            <i class="fa-solid fa-arrow-right -rotate-45"></i>
+        </div></button>
+    </footer>       
+    <!-- footer section end's here -->
 
-    </footer>           
 </body>
 </html>
