--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <header class="mb-10 lg:mb-20 bg-gradient-to-t from-white to-white/0">
-        <!-- navbar start's here -->
+        <!-- navbar starts here -->
         <nav class="w-11/12 lg:w-4/5 mx-auto flex justify-between items-center my-9 md:my-14">
             <div class="flex items-center space-x-2">
                 <div class="bg-[#ABEF5F] size-10 flex justify-center items-center rounded-3xl text-2xl ">
@@ -59,9 +59,9 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
-        <!-- navbar end's here -->
+        <!-- navbar ends here -->
        
-       <!-- banner start's here -->
+       <!-- banner starts here -->
         <div class="w-[90%] mx-auto text-center space-y-4 lg:space-y-6">
             <img class="mx-auto" src="assets/banner.png" alt="">
             <h1 class="text-3xl lg:text-7xl text-[#212121] font-bold">A barn house of this design has a striking appearance</h1>
@@ -70,10 +70,10 @@
                 <i class="fa-solid fa-arrow-right -rotate-45"></i>
             </div></button>
         </div>
-       <!-- banner end's here -->
+       <!-- banner ends here -->
     </header>
     <main class="bg-stone-100">
-        <!-- about us section start's here -->
+        <!-- about us section starts here -->
         <div class="relative hidden lg:block">
             <div class="absolute top-10 left-24">
                 <img src="assets/Vector.png" alt="">
@@ -119,8 +119,8 @@
                 <img src="assets/Rectangle.png" alt="">
             </div>
         </div>
-        <!-- about us section end's here -->
-        <!-- how we work section start's here -->
+        <!-- about us section ends here -->
+        <!-- how we work section starts here -->
         <div class="flex flex-col items-center text-center space-y-4 lg:space-y-6">
             <button class="btn bg-white rounded-3xl space-x-2 border-none text-[#494949]">
                 <i class="fa-solid fa-arrow-right"></i>
@@ -159,7 +159,65 @@
                 </div>
             </div>
         </div>
-        <!-- how we work section end's here -->
+        <!-- how we work section ends here -->
+         <!-- portfolio section starts here -->
+        
+        <div class="my-8 lg:my-24">
+            <div class="flex justify-center">
+                <button class="btn bg-[rgba(171,239,95,0.2)] rounded-3xl space-x-2 border-none text-[#494949]">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    <p class="text-base font-bold">Explore our Latest works</p>
+                </button>
+            </div>
+            <h1 class="text-2xl lg:text-4xl text-[#212121] font-bold text-center mt-4">Our Latest Portfolio</h1>
+            <p class="text-sm lg:text-base text-[#494949] w-[90%] mx-auto lg:w-1/2 mt-6 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <div class="space-y-6 mt-8">
+                <div class="grid grid-cols-1 lg:grid-cols-3 w-[90%] lg:w-4/5 mx-auto gap-6">
+                    <div class="lg:flex border-2 border-[rgb(233,233,233)] p-6 rounded-2xl lg:col-span-2 space-y-6 lg:space-x-6 lg:space-y-0"> 
+                        <img class="w-full lg:w-auto" src="assets/img1.png" alt="">
+                        <div class="flex flex-col justify-between space-y-5 lg:space-y-0">
+                            <h1 class="text-2xl font-bold text-[#494949]">Commercial</h1>
+                            <p class="text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                            <div class="flex gap-3">
+                                <h1 class=" text-[#212121] text-xl font-bold rounded-3xl">View Details</h1>
+                                <div class="bg-[#ABEF5F] size-8 flex justify-center items-center rounded-3xl text-2xl">
+                                    <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="">
+                        <img class="w-full p-6 border-2 border-[rgb(233,233,233)] rounded-2xl" src="assets/img2.png" alt="">
+                    </div>
+                </div>
+                <div class="grid grid-cols-1 lg:grid-cols-4 w-[90%] lg:w-4/5 mx-auto gap-6">
+                    <div class="    ">
+                        <img class="p-6 border-2 border-[rgb(233,233,233)] rounded-2xl w-full" src="assets/img3.png" alt="">
+                    </div>
+                    <div class=" lg:flex border-2 border-[rgb(233,233,233)] p-6 rounded-2xl lg:col-span-2 space-y-6 lg:space-x-6 lg:space-y-0"> 
+                        <img class="w-full lg:w-auto" src="assets/img4.png" alt="">
+                        <div class="flex flex-col justify-between space-y-5 lg:space-y-0">
+                            <h1 class="text-2xl font-bold text-[#494949]">Commercial</h1>
+                            <p class="text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <button class="hidden btn w-fit text-black text-xl font-bold rounded-3xl">View Details<div class="bg-[#ABEF5F] size-8 flex justify-center items-center rounded-3xl text-2xl">
+                                <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                            </div></button>
+                            <div class="flex gap-3">
+                                <h1 class=" text-[#212121] text-xl font-bold rounded-3xl">View Details</h1>
+                                <div class="bg-[#ABEF5F] size-8 flex justify-center items-center rounded-3xl text-2xl">
+                                    <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <img class="p-6 border-2 border-[rgb(233,233,233)] rounded-2xl w-full" src="assets/img5.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+         <!-- portfolio section ends here -->
         <!-- let's connect section starts here -->
         <div class="flex flex-col items-center space-y-4 bg-[url('/assets/bg.jpg')] py-8 lg:py-24">
             <button class="btn bg-[rgba(171,239,95,0.2)] rounded-3xl space-x-2 border-none text-[#494949]">
@@ -192,7 +250,7 @@
         </div>
         <!-- let's connect section ends here -->
     </main>
-    <!-- footer section start's here -->
+    <!-- footer section starts here -->
     <footer class="bg-[rgb(28,28,28);] flex flex-col items-center py-[72px] lg:py-24">
         <div class="flex items-center space-x-2">
             <div class="bg-[#ABEF5F] size-10 flex justify-center items-center rounded-3xl text-2xl ">
@@ -214,7 +272,7 @@
             <i class="fa-solid fa-arrow-right -rotate-45"></i>
         </div></button>
     </footer>       
-    <!-- footer section end's here -->
+    <!-- footer section ends here -->
 
 </body>
 </html>
