--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 </ul>
             </div>
             <div class="hidden md:block space-x-4">
-                <button class="btn btn-circle"><i class="fa-solid fa-magnifying-glass"></i></button>
-                <button class="btn btn-circle"><i class="fa-solid fa-cart-shopping"></i></button>
+                <button class="btn btn-circle text-xl border-2 border-[rgb(233,233,233)]"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button class="btn btn-circle text-xl border-2 border-[rgb(233,233,233)]"><i class="fa-solid fa-cart-shopping"></i></button>
                 <button class="btn btn-primary border-none bg-[#ABEF5F] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl">Book Consult<div class="bg-[#1C1C1C] size-8 flex justify-center items-center rounded-3xl text-2xl text-white">
                     <i class="fa-solid fa-arrow-right -rotate-45"></i>
                 </div></button>
             </div>
-            <div class="md:hidden border-2 size-12 flex justify-center items-center rounded-3xl text-xl overflow-hidden">
+            <div class="md:hidden border-2 size-12 flex justify-center items-center rounded-3xl text-xl overflow-hidden text-stone-500">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
