--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <!-- navbar ends here -->
        
        <!-- banner starts here -->
-        <div class="w-[90%] mx-auto text-center space-y-4 lg:space-y-6">
-            <img class="mx-auto" src="assets/banner.png" alt="">
-            <h1 class="text-3xl lg:text-7xl text-[#212121] font-bold">A barn house of this design has a striking appearance</h1>
-            <p class="text-lg lg:text-lg text-[#936161]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-            <button class="btn w-full md:w-auto border-green-400 bg-[#ABEF5F80] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl">View Details<div class="bg-[#ABEF5F] size-8 flex justify-center items-center rounded-3xl text-2xl">
+        <div class="mx-auto text-center space-y-4 lg:space-y-6">
+            <img class="w-4/5 lg:w-auto mx-auto" src="assets/banner.png" alt="">
+            <h1 class="w-4/5 mx-auto text-3xl lg:text-7xl text-[#212121] font-bold">A barn house of this design has a striking appearance</h1>
+            <p class="w-[90%] lg:w-[70%] mx-auto text-base lg:text-lg text-[#936161]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+            <button class="btn w-[90%] md:w-fit border-green-400 bg-[#ABEF5F80] text-black hover:bg-[#a7fd45] text-xl font-bold rounded-3xl">View Details<div class="bg-[#ABEF5F] size-8 flex justify-center items-center rounded-3xl text-2xl">
                 <i class="fa-solid fa-arrow-right -rotate-45"></i>
             </div></button>
         </div>
