--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p class="text-lg font-bold">About Us</p>
                     </button>
                 </div>
-                <div class="space-y-4 lg:space-y-6">
+                <div class="space-y-4 lg:space-y-8">
                     <h1 class="text-2xl lg:text-4xl font-bold text-[#212121] text-center lg:text-left">We design thoughtful,<br> liveable spaces</h1>
                     <p class="text-lg text-[#494949] text-center lg:text-left">The barn house captivates with its blend of rustic charm and 
                         modern sophistication, featuring weathered wood, sleek metal accents.</p>
@@ -127,7 +127,7 @@
                 <p class="text-lg font-bold">How we works</p>
             </button>
             <h1 class="text-[#212121] text-2xl lg:text-5xl font-bold">Our Works Process</h1>
-            <p class="text-[#494949] w-[90%] lg:w-1/2">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-[#494949] w-[90%] lg:w-[45%]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-4 w-[90%] lg:w-4/5 mx-auto gap-6 mt-8 pb-10 lg:pb-20">
             <div class="card">
@@ -169,8 +169,8 @@
                     <p class="text-base font-bold">Explore our Latest works</p>
                 </button>
             </div>
-            <h1 class="text-2xl lg:text-4xl text-[#212121] font-bold text-center mt-4">Our Latest Portfolio</h1>
-            <p class="text-sm lg:text-base text-[#494949] w-[90%] mx-auto lg:w-1/2 mt-6 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <h1 class="text-2xl lg:text-5xl text-[#212121] font-bold text-center mt-4">Our Latest Portfolio</h1>
+            <p class="text-sm lg:text-base text-[#494949] w-[90%] mx-auto lg:w-[45%] mt-6 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             <div class="space-y-6 mt-8">
                 <div class="grid grid-cols-1 lg:grid-cols-3 w-[90%] lg:w-4/5 mx-auto gap-6">
                     <div class="lg:flex border-2 border-[rgb(233,233,233)] p-6 rounded-2xl lg:col-span-2 space-y-6 lg:space-x-6 lg:space-y-0"> 
@@ -225,7 +225,7 @@
                 <p class="text-base font-bold">Let’s Connect</p>
             </button>
             <div class="w-full space-y-6 flex flex-col items-center">
-                <h1 class="w-[90%] mx-auto text-center text-2xl lg:text-4xl font-bold text-[#212121]">Let’s Discuss Next Project</h1>
+                <h1 class="w-[90%] mx-auto text-center text-2xl lg:text-5xl font-bold text-[#212121]">Let’s Discuss Next Project</h1>
                 <p class="w-[90%] lg:w-1/2 mx-auto text-center text-sm text-[#494949] lg:text-base">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 <div class="w-[90%] lg:w-[67%] mx-auto space-y-5 lg:space-y-6">
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 lg:gap-6">
