solving the background problem in banner section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </script>
 </head>
 <body>
-    <header class="mb-10 lg:mb-20 bg-gradient-to-t from-white to-white/0">
+    <header class="mb-10 lg:mb-20">
         <!-- navbar starts here -->
         <nav class="w-11/12 lg:w-4/5 mx-auto flex justify-between items-center my-9 md:my-14">
             <div class="flex items-center space-x-2">
