added light theme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +29,7 @@
       </script>
 </head>
 <body>
-    <header class="mb-10 lg:mb-20">
+    <header class="mb-10 lg:mb-20 bg-white">
         <!-- navbar starts here -->
         <nav class="w-11/12 lg:w-4/5 mx-auto flex justify-between items-center my-9 md:my-14">
             <div class="flex items-center space-x-2">
