fixing the background image related problem

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
          <!-- portfolio section ends here -->
         <!-- let's connect section starts here -->
-        <div class="flex flex-col items-center space-y-4 bg-[url('/assets/bg.jpg')] py-8 lg:py-24">
+        <div class="flex flex-col items-center space-y-4 bg-[url('assets/bg.jpg')] py-8 lg:py-24">
             <button class="btn bg-[rgba(171,239,95,0.2)] rounded-3xl space-x-2 border-none text-[#494949]">
                 <i class="fa-solid fa-arrow-right"></i>
                 <p class="text-base font-bold">Let’s Connect</p>
@@ -273,6 +273,7 @@
         </div></button>
     </footer>       
     <!-- footer section ends here -->
+     
 
 </body>
 </html>
